# STAT_8289_Final_Project_Zhiyu_Cheng

./: .gitignore  .pre-commit-config.yaml  README.md  general_log.md  pyproject.toml  requirements-base.txt  requirements-cpu.txt  requirements-gpu.txt
configs/: default_config.yaml
data/processed/policy_samples/: 100K_pi_H_v2_metadata.json  (+3 more)
notebooks/: colab_sampling.ipynb
paper/: main.tex  references.bib
results/distillation/: distillation_report.json
results/fda/: fda_report.json
results/jsd/: jsd_report.json
results/occlusion/: approximate_sensitivity.json  occlusion_report.json  precise_sensitivity.json
scripts/: __init__.py  prepare_data.py  run_distillation.py  run_fda_analysis.py  run_jsd_analysis.py  run_occlusion.py  sample_policies.py  validate_features.py  validate_models.py  verify_card_encoding.py  verify_double_status.py  verify_hand_encoding_v2.py  verify_pgx_state.py
src/: __init__.py  meta_logger.py  models.py  policy_loader.py  utils.py
src/distillation/: __init__.py  gam_distill.py  metrics.py  tree_distill.py  visualization.py
src/fda/: __init__.py  bootstrap.py  data_loader.py  gam_fitting.py  visualization.py
src/features/: __init__.py  bidding_features.py  constants.py  context_features.py  feature_extractor.py  hand_features.py
src/jsd/: __init__.py  ebm_analysis.py  gam_fitting.py  metrics.py  visualization.py
src/occlusion/: __init__.py  approximate.py  feature_groups.py  metrics.py  precise.py  visualization.py
src/sampling/: __init__.py  sampler.py
tests/: integration_test.py  smoke_test.py
(+13 files in other folders)
