[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge_bidding_interpretability"
version = "0.1.0"
description = "Interpreting Bridge Bidding Policies via Compositional FDA and Interpretable Distillation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "STAT 8289 Final Project"}
]
keywords = ["bridge", "reinforcement-learning", "interpretability", "FDA"]

# Note: Core dependencies are managed via requirements-*.txt
# This file is primarily for editable installation (pip install -e .)
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
